Relay url to content script and add a button logic
[CONTAINS A BUG]: The sendMessage tries to send the message too fast
while the content script hasn't yet created the listener. Works when
debugging and using breakpoints.

Adds a button to content page with logic that logs the url of the page
the user was trying to access.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doomscroll...NOT</title>
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Doomscroll identified</h1>
     <p>Are you sure you want to ruin your day?</p>
+    <button id="continue-button" disabled>Yes</button>
 </body>
 </html>
